# oopsie

./: .gitignore  README.rst  pyproject.toml  setup.py
oopsie/: main.py  trellocalendar.py
tests/: test_oopsie.py
