[tool.poetry]
name = "oopsie"
version = "0.1.0"
description = ""
authors = ["romaintailhurat <romain.tailhurat@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.2"
openpyxl = "^3.0.10"
click = "^8.1.3"
streamlit = "^1.16.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
